Add basic styling for price and date placeholder

--- a/style.css
+++ b/style.css
@@ -128,3 +128,8 @@ hr.big {
 hr.small {
     border-top: 4px solid black;
 }
+
+#priceAndDate {
+    display: flex;
+    justify-content: space-between;
+}
