--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     font-family: 'Times New Roman', Times, serif;
     background-color: #f5f5f5;
+    background-image: url("assets/desk.jpeg");
+    background-size: cover;
     color: #333;
     line-height: 1.6;
 }
@@ -9,14 +11,45 @@ body {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-image: url("paper.jpg");
+    background-image: url("assets/paper.jpg");
+    backdrop-filter: blur(20px);
     background-size: cover;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border: 1px solid #ddd;
 }
 
 .crossword {
+    display: inline-block;
     align-content: center;
+    justify-content: center;
+}
+
+.row {
+    display: flex;
+}
+
+.cell {
+    width: 80px;
+    height: 80px;
+    border: 4px solid #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.cell input {
+    width: 100%;
+    height: 100%;
+    border: none;
+    text-align: center;
+    font-size: 1.5em;
+    box-sizing: border-box;
+}
+
+.cell.empty {
+    background-color: #000;
+    border: 4px;
 }
 
 .white1 {
